--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ h1,h2,h3,h4,h5,h6,p,ul{
  text-align: center;
  border: none;
  cursor: pointer;
- transition: background-color 250ms 
+ transition: background-color 250ms
  cubic-bezier(0.4, 0, 0.2, 1);
 }
  .button-hero:hover,
@@ -756,7 +756,6 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
   position:absolute;
   max-width: 408px;
   width: 100%;
-  height: 576px;
   top: 50%;
   left: 50%;
   transform:translate(-50% , -50%);
@@ -796,4 +795,194 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  .modal-close-btn:focus,
  .modal-close-btn-icon{
   fill:currentColor;
+ }
+
+ .form-title{
+  margin-top: 24px;
+  font-family: 'Roboto';
+ font-style: normal;
+ font-weight: 500;
+ font-size: 16px;
+ line-height: 1.5;
+ text-align: center;
+ letter-spacing: 0.02em;
+  color: var(--accent-text-color);
+  padding-top: 24px;
+ }
+ .modal-form{
+  display: flex;
+  flex-direction: column;
+ }
+ .modal-form-input-desc{
+font-weight: 400;
+font-size: 12px;
+line-height: 1.16;
+color: var(--clients-color);
+display:block;
+margin-top:16px;
+margin-bottom: 4px;
+ }
+ .modal-form-field{
+  position: relative;
+ }
+  .modal-form-field:focus{
+    border: 1px solid var(--button-color);
+ outline:none;
+ }
+ .form-icon{
+  display: block;
+  position: absolute;
+  top:50%;
+  left: 19px;
+  transform: translate(0, -50%);
+ }
+ .form-input{
+  width:100%;
+  background: #fcfcfc;
+  border-radius: 4px;
+  height:40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  outline:none;
+  padding: 8px 38px;
+  margin-top:4px;
+  color:#000;
+ }
+ .form-input:focus{
+  color: var(--button-color);
+  outline:none;
+  border:1px solid var(--button-color);
+  border-radius: 4px;
+ }
+.form-input:focus+ .form-icon{
+  fill:var(--button-color);
+ }
+ .modal-form-comment{
+  resize:none;
+  width:100%;
+  height: 100px;
+  padding:8px 16px ;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  transition: opacity 0.2;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  color:#000;
+ }
+ .modal-form-comment:focus{
+  outline:none;
+  border-color:var(--button-color);
+ }
+ .modal-form-check-desc{
+  color:var(--clients-color);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  display:flex;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 24px;
+ }
+.modal-form-check-desc::before{
+  content:"";
+  width:16px;
+  height: 16px;
+  display: block;
+  border-radius:2px ;
+  cursor: pointer;
+  border-radius: 2px;
+  border:1.25px solid var(--background-color);
+  margin-right:8px;
+}
+.modal-form-check:checked + .modal-form-check-desc::before{
+  background-image: url(../images/icon-click.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+ .modal-form-input-wrapper{
+  position:relative;
+  display:block;
+ }
+ .form-modal-btn{
+  background: var(--button-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 169px;
+  height: 56px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color:var(--title-color);
+  margin-left:auto;
+  margin-right:auto;
+ }
+ .form-modal-btn:hover,
+ .form-modal-btn:focus{
+  background: var(--background-color);
+ }
+ .subscribe-field{
+  display: flex;
+  border: var(--title-color);
+  }
+  .subscribe-title{
+margin-bottom: 16px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: var(--title-color);
+margin-left: 80px;
+  }
+  .policy{
+    color:var(--button-color);
+  }
+ .subscribe-input{
+width: 264px;
+height: 40px;
+padding-left:16px;
+color: var(--title-color);
+border-radius:4px;
+background-color: transparent;
+outline:transparent;
+margin-left: 80px;
+border: 1px solid var(--title-color);
+ }
+ .subscribe-input::placeholder{
+font-weight: 400;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: var(--title-color);
+ }
+ .subscribe-input:focus{
+ border-color:var(--button-color);
+ }
+ .subscribe-btn{
+ display:flex;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ font-family: inherit;
+ font-weight: 500;
+ font-size: 16px;
+ line-height: 1.5;
+ letter-spacing: 0.04em;
+ cursor:pointer;
+ margin-left:24px;
+ max-width:165px;
+ padding: 8px 24px;
+ gap:16px;
+ background-color: var(--button-color);
+ border-radius: 4px;
+ border:none;
+ color:var(--title-color);
+ transition: background-color 250ms
+ cubic-bezier(0.4, 0, 0.2, 1);
+ }
+ .subscribe-btn:focus,
+ .subscribe-btn:hover{
+  background: var(--background-color);
  }
