--- a/css/styles.css
+++ b/css/styles.css
@@ -758,7 +758,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  align-items: center;
  position:absolute;
  border: 1px solid rgba(0, 0, 0, 0.1);
- transition:  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
  .modal-close-btn-icon{
   width:100%;
@@ -769,7 +769,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  .modal-close-btn:hover,
  .modal-close-btn:focus{
  background:var(--background-color);
- color:#fff;
+ color:var(--title-color);
  }
  .modal-close-btn:hover,
  .modal-close-btn-icon,
@@ -777,7 +777,6 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  .modal-close-btn-icon{
   fill:currentColor;
  }
-
  .form-title{
  font-weight: 500;
  font-size: 16px;
@@ -786,7 +785,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
  letter-spacing: 0.02em;
  color: var(--accent-text-color);
  margin-bottom: 16px;
-  
+ margin-top: 24px;
  }
  .modal-form{
   display: flex;
@@ -803,7 +802,6 @@ margin-bottom: 4px;
  .modal-form-field{
   position: relative;
   margin-bottom: 8px;
-
  }
   .modal-form-field:focus{
     border: 1px solid var(--button-color);
@@ -856,16 +854,21 @@ margin-bottom: 4px;
   outline:none;
   border-color:var(--button-color);
  }
-
+.modal-form-label{
+  display: flex;
+  margin-top: 6px;
+}
  .modal-form-custom-checkbox{
   display: inline-flex;
   align-items: center;
   justify-content: center;
   width: 16px;
-  height: 15px;
-  margin-left: 10px;
-  margin-right: 10px;
-  border: 2px solid var(--title-color);
+  height: 16px;
+  border: 1px solid var(--form-input);
+  border-radius: 2px;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
  }
 .modal-form-check-icon{
   display:block;
@@ -882,15 +885,14 @@ margin-bottom: 4px;
   display:flex;
   align-items: center;
   margin-bottom: 24px;
+  margin-left: 8px;
  }
-
 .modal-form-check:checked + .modal-form-custom-checkbox{
-  background-color: var(--accent-text-color);
-  border: 1px solid var(--accent-text-color);
+  background-color: var(--background-color);
+  border: 1px solid var(--background-color);
 }
 .modal-form-check:checked + .modal-form-custom-checkbox .modal-form-check-icon{
   opacity:1;
-  fill:var
 }
  .modal-form-input-wrapper{
   position:relative;
